<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="contract">Пользовательское соглашение</string>
    <string name="my_mail">nikita.kolgushkin@mail.ru</string>
    <string name="for_developer">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="course_url">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="ya_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="nothing_was_found">Ничего не нашлось</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_were_looking_for">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="mediateka">Медиатека</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists_not_ex">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="track_library_empty">Ваша медиатека пуста</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="not_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="finish_to_create_playlist">Завершить создание плейлиста?</string>
    <string name="all_unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="redact">Сохранить</string>
    <string name="want_to_delete">Хотите удалить трек?</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_tracks">В этом плейлисте нет треков</string>
    <string name="no_tracks_for_share">В этом плейлисте нет списка треков, которыми можно поделиться"</string>
    <string name="share_with">Поделиться плейлистом через…</string>
</resources>