<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white_black"
    tools:context="com.example.playlistmaker.ui.settings.fragment.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_header"
            android:layout_marginTop="@dimen/padding_14"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginBottom="@dimen/padding_16"
            android:text="@string/settings"
            android:fontFamily="@font/ys_text_medium"
            android:textColor="@color/black_white"
            android:textSize="@dimen/text_22"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_16"
            android:paddingVertical="@dimen/padding_10">

            <TextView
                style="@style/SettingsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/mode_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:thumbTint="@drawable/switch_thumb"
                app:trackTint="@drawable/switch_track" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:paddingEnd="11dp"
            android:paddingVertical="@dimen/padding_10">

            <TextView
                style="@style/SettingsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"/>

            <ImageView
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_share" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:paddingEnd="11dp"
            android:paddingVertical="@dimen/padding_10">

            <TextView
                style="@style/SettingsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"/>

            <ImageView
                android:id="@+id/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/ic_support" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_16"
            android:paddingEnd="11dp"
            android:paddingVertical="@dimen/padding_10">

            <TextView
                style="@style/SettingsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contract" />

            <ImageView
                android:id="@+id/contract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/ic_arrow" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>