<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/blue"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_header"
            android:gravity="start"
            android:text="Playlist maker"
            android:textSize="@dimen/text_22"
            android:textColor="@color/white"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="9"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:id="@+id/search"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textSize="@dimen/text_22"
            android:textColor="@color/black"
            android:foreground="?attr/selectableItemBackground"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius_16"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_8"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/media"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textSize="@dimen/text_22"
            android:textColor="@color/black"
            android:foreground="?attr/selectableItemBackground"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius_16"
            app:icon="@drawable/ic_media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_8"
            app:iconTint="@color/black"/>

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textSize="@dimen/text_22"
            android:textColor="@color/black"
            android:foreground="?attr/selectableItemBackground"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/radius_16"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_8"
            app:iconTint="@color/black"/>
    </LinearLayout>
</LinearLayout>