<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_4"
        android:background="@color/white_black">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/main_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_marginStart="@dimen/padding_8"
            android:layout_marginBottom="@dimen/padding_16"
            android:text="@string/new_playlist"
            android:fontFamily="@font/ys_text_medium"
            android:textColor="@color/black_white"
            android:textSize="@dimen/text_22"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@id/main_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/createButton">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/padding_20"
                >

                <ImageView
                    android:id="@+id/playlist_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:maxHeight="312dp"
                    android:background="@drawable/avatar_layer_list"
                    android:scaleType="centerCrop" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.PlaylistMaker.TextInputLayout.OutlinedBox"
                    android:id="@+id/name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/playlist_name"
                    android:textColorHint="@color/black_white"
                    android:layout_marginTop="@dimen/padding_32">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.PlaylistMaker.TextInputLayout.OutlinedBox"
                    android:id="@+id/description_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/playlist_description"
                    android:textColorHint="@color/black_white"
                    android:layout_marginTop="@dimen/padding_16">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_32"
            android:layout_marginHorizontal="@dimen/padding_17"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="@dimen/text_16"
            android:fontFamily="@font/ys_text_medium"
            android:textAllCaps="false"
            android:backgroundTint="@drawable/playlist_create_button_selector"
            android:enabled="false"
            app:cornerRadius="@dimen/radius_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
