<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.playlistmaker.UI.player.fragment.MediaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_black"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/album_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:layout_marginTop="26dp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/album_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back"
            tools:src="@drawable/album" />

        <TextView
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:fontFamily="@font/ys_text_medium"
            android:textSize="@dimen/text_22"
            android:textColor="@color/black_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/album_image"
            app:layout_constraintBottom_toTopOf="@id/artist_name"
            tools:text="Yesterday (Remastered 2009)"/>

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:fontFamily="@font/ys_text_medium"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_name"
            app:layout_constraintBottom_toTopOf="@id/play"
            tools:text="The Beatles "/>

        <ImageButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@color/transparent"
            android:src="@drawable/play"
            app:layout_constraintBottom_toTopOf="@id/time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <ImageButton
            android:id="@+id/playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/collections"
            android:background="@color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/play"
            app:layout_constraintTop_toTopOf="@id/play"
            app:layout_constraintBottom_toBottomOf="@id/play"/>

        <ImageButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/like_disabled"
            android:background="@color/transparent"
            app:layout_constraintStart_toEndOf="@id/play"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/play"
            app:layout_constraintBottom_toBottomOf="@id/play"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_medium"
            android:textSize="@dimen/text_14"
            android:textColor="@color/black_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/play"
            app:layout_constraintBottom_toTopOf="@id/duration"
            android:text="0:30"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginStart="@dimen/padding_16"
            android:textColor="@color/grey"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time"
            app:layout_constraintBottom_toTopOf="@id/album"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="@dimen/padding_16"
            android:textColor="@color/grey"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/duration"
            app:layout_constraintBottom_toTopOf="@id/year"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="@dimen/padding_16"
            android:textColor="@color/grey"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album"
            app:layout_constraintBottom_toTopOf="@id/genre"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="@dimen/padding_16"
            android:textColor="@color/grey"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/year"
            app:layout_constraintBottom_toTopOf="@id/country"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginBottom="20dp"
            android:textColor="@color/grey"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genre"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/duration_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_16"
            android:textColor="@color/black_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/duration"
            app:layout_constraintBottom_toBottomOf="@id/duration"
            tools:text="5:35"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/album_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_16"
            android:textColor="@color/black_white"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxWidth="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/album"
            app:layout_constraintBottom_toBottomOf="@id/album"
            tools:text="Yesterday (Remastered 2009)"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/year_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_16"
            android:textColor="@color/black_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/year"
            app:layout_constraintBottom_toBottomOf="@id/year"
            tools:text="1965"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/genre_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_16"
            android:textColor="@color/black_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/genre"
            app:layout_constraintBottom_toBottomOf="@id/genre"
            tools:text="Rock"/>

        <TextView
            style="@style/MediaPlayerTextViewStyle"
            android:id="@+id/country_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_16"
            android:textColor="@color/black_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/country"
            app:layout_constraintBottom_toBottomOf="@id/country"
            tools:text="Великобритания"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_black"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/bottomsheet_handle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_12"
            android:paddingTop="18dp"
            android:paddingBottom="@dimen/padding_12"
            android:layout_marginBottom="@dimen/padding_16"
            android:text="Добавить в плейлист"
            android:textColor="@color/black_white"
            android:textSize="19sp"
            android:fontFamily="@font/ys_text_medium" />

        <Button
            style="@style/BlackWhiteButtonStyle"
            android:id="@+id/new_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:layout_marginBottom="@dimen/margin_24"
            android:text="@string/new_playlist"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/res_not_ex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:src="@drawable/res_not_ex"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_medium"
            android:textSize="@dimen/text_19"
            android:textColor="@color/black_white"
            android:gravity="center_horizontal"
            android:text="@string/playlists_not_ex"
            android:layout_marginTop="@dimen/padding_16"
            android:layout_gravity="center"/>
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_24"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>